# Neutron-Python

./: README.md  extra.py  pyproject.toml  test.py
activations/: softmax.py
core/: _module.py
losses/: __init__.py  log_loss.py
modules/: linear.py
neutron/: LICENSE  __init__.py  custom_models.py  metrics.py  models.py  utils.py
neutron/activations/: softmax.py
neutron/core/: _autograd.py  _layers.py  _module.py  _tracer.py
neutron/losses/: log_loss.py
neutron/modules/: linear.py
neutron/optimizers/: SGD.py  adam.py  sgd.py
optimizers/: sgd.py
