[build-system]
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutron"
version = "0.0.1"
authors = [{name = "Sarubo Dev"}]
description = "A high-level wrapper for the jax and equinox enviroment."
requires-python = ">=3.13.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/SaruboDev/Neutron"
Issues = "https://github.com/SaruboDev/Neutron/issues"

[tool.setuptools]
packages = ["neutron"]